# langchain-chainlit-docker-deployment-template

./: .gitignore  Dockerfile  Fixed_Term_Contracts_FTCs.csv  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
.chainlit/: config.toml
demo_app/: ingestion.py  main.py
